--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+@layer base {
+  * {
+    @apply m-0 p-0;
+  }
+}
+
 @layer components {
   .role_btn {
     @apply flex text-center border px-2 rounded-lg text-[13px] border-gray-300 p-2 py-0  font-semibold bg-blue-100 text-blue-700;
@@ -32,11 +38,15 @@
   }
 
   header {
-    @apply  w-full max-w-7xl mx-auto;
+    @apply w-full max-w-7xl mx-auto;
   }
 
-  .root{
-    @apply relative w-full max-w-7xl mx-auto ;
+  /* .root {
+    @apply relative w-full max-w-7xl  mx-auto;
+  } */
+
+  thead{
+    @apply w-full
   }
 
 }
@@ -48,7 +58,6 @@ body {
 /* ****************************Dark mode********************** */
 .dark {
   background: black;
-
 
   h1,
   h2,
@@ -158,13 +167,13 @@ body {
     color: rgba(128, 128, 128, 0.73);
   }
 
-  .a{
+  .a {
     background-color: white;
     color: black;
   }
-   
 
-  .ab, .pending {
+  .ab,
+  .pending {
     background: rgba(128, 128, 128, 0.429);
     color: white;
   }
